--- a/index_univ.html
+++ b/index_univ.html
@@ -19,6 +19,8 @@
             a {color: blue; text-decoration: underline;}
             a:hover {color: #ff0000;}
             th:nth-child(1) {width: 45px;}
+            th:nth-child(2) {width: 100px;}
+            th:nth-child(3) {width: 150px;}
             th:nth-child(n+8):nth-child(-n+9) {width: 180px;}
             th:nth-child(10) {width: 100px;}
             td:nth-child(1), td:nth-child(n+8):nth-child(-n+11) {text-align: center;}
@@ -28,6 +30,8 @@
             .btn_box a {text-align: center; color: #222; font-weight: 600; border-radius: 9999px; text-decoration: none; padding: 8px 12px;}
             .btn_box a.active {background-color: blue; color: #fff;}
             a.none {color: #555;}
+            th:nth-child(7) {width: auto;}
+            th:nth-child(8) {width: auto;}
         </style>
         <script>
             document.addEventListener("DOMContentLoaded",() => {
@@ -64,17 +68,32 @@
             <tbody>
                 <tr>
                     <td class="no"></td>
+                    <td>취업지원</td>
+                    <td>청년일자리 첫걸음 보장제</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>운영대학 목록</td>
+                    <td>UI_ADHPCaM01</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCaM01" target="_blank" class="none">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
-                    <td>참여신청서 - 목록 없음</td>
+                    <td>UI_ADHPCbM01</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/참여신청서-목록없음.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCbM01.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -85,11 +104,11 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
-                    <td>참여신청서 - 목록 있음</td>
+                    <td>UI_ADHPCbM02</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/참여신청서-목록있음.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCbM02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -100,11 +119,11 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 이전정보 팝업</td>
-                    <td>참여신청서 - 이전정보 팝업</td>
+                    <td>UI_ADHPCbP03</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/참여신청서-이전정보팝업.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCbP03.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -115,11 +134,86 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 등록</td>
-                    <td>참여신청서 - 등록</td>
+                    <td>UI_ADHPCbS04</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/참여신청서-등록.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCbS04.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여 신청서 - 등록 제출완료</td>
+                    <td>UI_ADHPCbS05</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbS05.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 조회_제출</td>
+                    <td>UI_ADHPCbS06</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbS06.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 조회_불인정</td>
+                    <td>UI_ADHPCbS07</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbS07.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 회수_수정</td>
+                    <td>UI_ADHPCbS08</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbS08.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 참여신청서 조회</td>
+                    <td>UI_ADHPCbM09</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbM09.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -137,81 +231,8 @@
                         <a href="./pc/참여신청서-등록_이전 등록,제출신청정보가있는경우.html" target="_blank">PC</a>
                     </td>
                 </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td></td>
-                    <td>참여 신청서 - 등록 제출완료</td>
-                    <td>참여신청서-등록_제출완료</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/참여신청서-등록_제출완료.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td></td>
-                    <td>참여신청서 - 조회_제출</td>
-                    <td>참여신청서-조회_제출</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/참여신청서-조회_제출.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td></td>
-                    <td>참여신청서 - 조회_불인정</td>
-                    <td>참여신청서-조회_불인정</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/참여신청서-조회_불인정.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td></td>
-                    <td>참여신청서 - 회수_수정</td>
-                    <td>참여신청서-회수_수정</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/참여신청서-회수_수정.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>빌드업</td>
-                    <td></td>
-                    <td>빌드업 - 참여신청서 조회</td>
-                    <td>빌드업-참여신청서조회</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/빌드업-참여신청서조회.html" target="_blank">PC</a>
-                    </td>
-                </tr>
+                
+
                 <tr>
                     <td class="no"></td>
                     <td>마이페이지</td>
@@ -235,11 +256,11 @@
                     <td>빌드업</td>
                     <td></td>
                     <td>빌드업 - 상담이력_목록있음</td>
-                    <td>빌드업-상담이력_목록있음</td>
+                    <td>UI_ADHPCcM01</td>
                     <td class="status"></td>
                     <td></td>
                     <td>                   
-                        <a href="./pc/빌드업-상담이력_목록있음.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCcM01.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -265,26 +286,11 @@
                     <td>빌드업</td>
                     <td></td>
                     <td>빌드업 - 경력개발로드맵_목록있음</td>
-                    <td>빌드업-경력개발로드맵_목록있음</td>
+                    <td>UI_ADHPCdM01</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-경력개발로드맵_목록있음.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>빌드업</td>
-                    <td></td>
-                    <td>빌드업 - 경력개발로드맵_수정</td>
-                    <td>빌드업-경력개발로드맵_수정</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/빌드업-경력개발로드맵_수정.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdM01.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -295,11 +301,11 @@
                     <td>빌드업</td>
                     <td></td>
                     <td>빌드업 - 경력개발로드맵_등록</td>
-                    <td>빌드업-경력개발로드맵_등록</td>
+                    <td>UI_ADHPCdS02</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-경력개발로드맵_등록.html" target="_blank">PC</a>
+                        <a href="./pc/빌드업-UI_ADHPCdS02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -309,12 +315,28 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>빌드업</td>
                     <td></td>
-                    <td>빌드업 - 경력개발로드맵_조회(제출후)</td>
-                    <td>빌드업-경력개발로드맵_조회(제출후)</td>
+                    <td>빌드업 - 경력개발로드맵_수정</td>
+                    <td>UI_ADHPCdS03</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-경력개발로드맵_조회(제출후).html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdS03.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>빌드업</td>
+                    <td></td>
+                    <td>빌드업 - 경력개발로드맵_조회(제출후)</td>
+                    <td>UI_ADHPCdS04</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCdS04.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -325,11 +347,11 @@
                     <td>빌드업</td>
                     <td></td>
                     <td>빌드업 - 경력개발로드맵_수정(제출후_보완요청)</td>
-                    <td>빌드업-경력개발로드맵_수정(제출후_보완요청)</td>
+                    <td>UI_ADHPCdS05</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-경력개발로드맵_수정(제출후_보완요청).html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdS05.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -340,11 +362,146 @@
                     <td>빌드업</td>
                     <td></td>
                     <td>빌드업 - 경력개발로드맵_수정(제출승인후-변경신청)</td>
-                    <td>빌드업-경력개발로드맵_수정(제출승인후-변경신청)</td>
+                    <td>UI_ADHPCdS06</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-경력개발로드맵_수정(제출승인후-변경신청).html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdS06.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 참여신청서조회</td>
+                    <td>UI_ADHPCbM10</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCbM10.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 상담이력_목록있음</td>
+                    <td>UI_ADHPCcM02</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCcM02.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_목록</td>
+                    <td>UI_ADHPCeM01</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeM01.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_ST1</td>
+                    <td>UI_ADHPCeS02</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS02.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_ST2</td>
+                    <td>UI_ADHPCeS03</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS03.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_ST3</td>
+                    <td>UI_ADHPCeS04</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS04.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_ST4</td>
+                    <td>UI_ADHPCeS05</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS05.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_ST5</td>
+                    <td>UI_ADHPCeS06</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS06.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>점프업</td>
+                    <td></td>
+                    <td>점프업 - 취업준비도검사_조회</td>
+                    <td>UI_ADHPCeS07</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCeS07.html" target="_blank">PC</a>
                     </td>
                 </tr>
             </tbody>
