--- a/pc/08_UI_ADHPAbP06.html
+++ b/pc/08_UI_ADHPAbP06.html
@@ -229,8 +229,8 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
-
+        <script src="../pc/js/include_share.js"></script>        
+        <script src="../pc/js/contents.js"></script>
 
 
         <!-- 팝업내용 시작 -->
@@ -485,8 +485,6 @@
                     </div>
                 </div>
             </form:form>
-
-
         </section>
 
         <script>
