--- a/pc/09_UI_ADHPAbP07.html
+++ b/pc/09_UI_ADHPAbP07.html
@@ -221,7 +221,8 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script>        
+        <script src="../pc/js/contents.js"></script>
 
 
 
