--- a/index_univ.html
+++ b/index_univ.html
@@ -209,7 +209,7 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여 신청서 - 등록(이전 등록/제출 신청정보가 있는 경우)</td>
-                    <td>참여신청서-등록_이전 등록,제출신청정보가있는경우</td>
+                    <td>No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -240,9 +240,9 @@
                     <td>참여 프로그램 관리</td>
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
-                    <td>상담이력(빌드업)</td>
+                    <td>참여신청서(빌드업)</td>
                     <td>빌드업 - 상담이력_목록없음</td>
-                    <td>빌드업-상담이력_목록없음</td>
+                    <td>No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -272,7 +272,7 @@
                     <td>참여신청서</td>
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_목록없음</td>
-                    <td>빌드업-경력개발로드맵_목록없음</td>
+                    <td>No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
