--- a/index_univ.html
+++ b/index_univ.html
@@ -240,7 +240,7 @@
                     <td>참여 프로그램 관리</td>
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
-                    <td>참여신청서(빌드업)</td>
+                    <td>상담이력(빌드업)</td>
                     <td>빌드업 - 상담이력_목록없음</td>
                     <td>No screen ID</td>
                     <td class="status"></td>
@@ -255,7 +255,7 @@
                     <td>참여 프로그램 관리</td>
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
-                    <td>경력개발로드맵(빌드업)</td>
+                    <td>상담이력(빌드업)</td>
                     <td>빌드업 - 상담이력_목록있음</td>
                     <td>UI_ADHPCcM01</td>
                     <td class="status"></td>
