--- a/mobile/07_UI_ADHPAbS05.html
+++ b/mobile/07_UI_ADHPAbS05.html
@@ -139,7 +139,7 @@
                                                 <div class="box_table_group">
                                                     <div class="cell">
                                                         <span class="box_ipt new_ipt">
-                                                            <input type="text" id="major" class="input_txt" title="학과명" readonly placeholder="학과" required>
+                                                            <input type="text" id="department" class="input_txt" title="학과명" readonly placeholder="학과" required>
                                                             <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                         </span>
                                                     </div>
@@ -345,7 +345,7 @@
                                 </div>
                                 <div class="btn_box mt24">
                                     <button type="button" class="btn large type03" aria-label="신청 목록 페이지로 이동" onclick="window.location.href=''">목록</button>
-                                    <button type="button" class="btn large type01" aria-label="" onclick="window.location.href=''">삭제</button>
+                                    <button type="button" class="btn large type03" aria-label="" onclick="window.location.href=''">삭제</button>
                                     <button type="submit" id="srchBtn" class="btn large fill type01" onclick="">제출</button>
                                 </div>
                             </div>
