--- a/pc/03_UI_ADHPAbM01.html
+++ b/pc/03_UI_ADHPAbM01.html
@@ -70,8 +70,7 @@
                                         <div class="pa_page_empty mt80">
                                             <figure class="mb24"><img src="./include/images/ico60_warning_navy.svg"></figure>
                                             <p class="t3_sb">작성하신 졸업생 특화프로그램 참여신청서가 없습니다.</p>
-                                            <div class="box_btn_wrap mt40">
-                                                <a href="" class="btn big type02 btn_s_r">이전</a>
+                                            <div class="box_btn_wrap mt40 flex_js_r">
                                                 <a href="" class="btn big type01 fill">신청서 작성</a>
                                             </div>                                  
                                         </div>
