--- a/index_univ.html
+++ b/index_univ.html
@@ -32,6 +32,7 @@
             a.none {color: #555;}
             th:nth-child(7) {width: auto;}
             th:nth-child(8) {width: auto;}
+            .nosc {color: red;}
         </style>
         <script>
             document.addEventListener("DOMContentLoaded",() => {
@@ -209,7 +210,7 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여 신청서 - 등록(이전 등록/제출 신청정보가 있는 경우)</td>
-                    <td>No screen ID</td>
+                    <td class="nosc">No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -242,7 +243,7 @@
                     <td>참여신청서</td>
                     <td>상담이력(빌드업)</td>
                     <td>빌드업 - 상담이력_목록없음</td>
-                    <td>No screen ID</td>
+                    <td class="nosc">No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -272,7 +273,7 @@
                     <td>참여신청서</td>
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_목록없음</td>
-                    <td>No screen ID</td>
+                    <td class="nosc">No screen ID</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
@@ -517,7 +518,10 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfM01.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfM01_1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCfM01_2.html" target="_blank">PC-2</a>
+                        <a href="./pc/UI_ADHPCfM01_3.html" target="_blank">PC-3</a>
+                        <a href="./pc/UI_ADHPCfM01_4.html" target="_blank">PC-4</a>
                     </td>
                 </tr>
                 <tr>
@@ -532,7 +536,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfS02.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfS02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
