--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -137,7 +137,7 @@
                                                 <div class="box_table_group">
                                                     <div class="cell">
                                                         <span class="box_ipt new_ipt">
-                                                            <input type="text" id="major" class="input_txt" title="학과명" readonly placeholder="학과" required>
+                                                            <input type="text" id="department" class="input_txt" title="학과명" readonly placeholder="학과" required>
                                                             <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                         </span>
                                                     </div>
