--- a/pc/UI_ADHPCeS02.html
+++ b/pc/UI_ADHPCeS02.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업_취업준비도검사_ST1</title>
+        <title>점프업 - 취업준비도검사_ST1</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
