--- a/pc/UI_ADHPCfM01_4.html
+++ b/pc/UI_ADHPCfM01_4.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업_IAP관리_목록(승인완료)-모든 취업지원 유형의 계획을 등록했을 경우</title>
+        <title>점프업 - IAP관리_목록(승인완료)-모든 취업지원 유형의 계획을 등록했을 경우</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
