--- a/index_univ.html
+++ b/index_univ.html
@@ -551,7 +551,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfS03.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfS03.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -566,7 +566,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfS04.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfS04.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -581,7 +581,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfS05.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfS05.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -596,7 +596,22 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCfS06.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCfS06.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td>IAP관리(점프업)</td>
+                    <td>점프업_IAP관리_조회(변경제출)</td>
+                    <td>UI_ADHPCfS07</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCfS07.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
