--- a/pc/UI_ADHPCfM01_3.html
+++ b/pc/UI_ADHPCfM01_3.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업_IAP관리_목록(승인완료)</title>
+        <title>점프업 - IAP관리_목록(승인완료)</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
