--- a/index_univ.html
+++ b/index_univ.html
@@ -626,7 +626,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgM01.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCgM01.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -637,11 +637,11 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_등록(제출및저장전)</td>
-                    <td>UI_ADHPCgS02</td>
+                    <td>UI_ADHPCgM02</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgS02.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -652,11 +652,11 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(저장후제출전)</td>
-                    <td>UI_ADHPCgS03</td>
+                    <td>UI_ADHPCgM03</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgS03.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -667,11 +667,11 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_조회(제출후)</td>
-                    <td>UI_ADHPCgS04</td>
+                    <td>UI_ADHPCgM04</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgS04.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -682,11 +682,11 @@
                     <td>참여신청서</td>
                     <td>IAP관리(점프업)</td>
                     <td>점프업_IAP결과관리_수정(보완요청_제출후)</td>
-                    <td>UI_ADHPCgS05</td>
+                    <td>UI_ADHPCgM05</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCgS05.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -701,7 +701,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChM01.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChM01_1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPChM01_2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -716,7 +717,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS02.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -746,7 +747,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP04.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChP04.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
