--- a/index_univ.html
+++ b/index_univ.html
@@ -234,7 +234,6 @@
                         <a href="./pc/UI_ADHPCbM09.html" target="_blank">PC</a>
                     </td>
                 </tr>
-                
                 <tr>
                     <td class="no"></td>
                     <td>마이페이지</td>
@@ -242,27 +241,13 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>상담이력(빌드업)</td>
-                    <td>빌드업 - 상담이력_목록없음</td>
-                    <td class="nosc">No screen ID</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/빌드업-상담이력_목록없음.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td>상담이력(빌드업)</td>
-                    <td>빌드업 - 상담이력_목록있음</td>
+                    <td>빌드업 - 상담이력_목록</td>
                     <td>UI_ADHPCcM01</td>
                     <td class="status"></td>
                     <td></td>
                     <td>                   
-                        <a href="./pc/UI_ADHPCcM01.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCcM01-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCcM01-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -272,27 +257,13 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>경력개발로드맵(빌드업)</td>
-                    <td>빌드업 - 경력개발로드맵_목록없음</td>
-                    <td class="nosc">No screen ID</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/빌드업-경력개발로드맵_목록없음.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td>경력개발로드맵(빌드업)</td>
-                    <td>빌드업 - 경력개발로드맵_목록있음</td>
+                    <td>빌드업 - 경력개발로드맵_목록</td>
                     <td>UI_ADHPCdM01</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCdM01.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdM01-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCdM01-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -788,11 +759,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트신청관리_조회(보완요청)</td>
-                    <td>UI_ADHPChP07</td>
+                    <td>UI_ADHPChS07</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP07.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
