--- a/index_univ.html
+++ b/index_univ.html
@@ -699,11 +699,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>구직활동팝업</td>
-                    <td>UI_ADHPChP03</td>
+                    <td>UI_ADHPChS03</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP03.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS03.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -714,11 +714,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>부정수급 방지 확약서</td>
-                    <td>UI_ADHPChP04</td>
+                    <td>UI_ADHPChS04</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP04.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPChS04.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -729,11 +729,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트신청관리_수정(저장후제출전)</td>
-                    <td>UI_ADHPChP05</td>
+                    <td>UI_ADHPChS05</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP05.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS05.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -744,11 +744,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>점프업_포인트신청관리_조회(제출후)</td>
-                    <td>UI_ADHPChP06</td>
+                    <td>UI_ADHPChS06</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP06.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS06.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
                 <tr>
