--- a/index_univ.html
+++ b/index_univ.html
@@ -733,7 +733,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS05.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS05.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -748,7 +748,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS06.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChS06.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -764,21 +764,6 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="no"></td>
-                    <td>마이페이지</td>
-                    <td>참여 프로그램 관리</td>
-                    <td>대학 재학생 맞춤형 고용서비스</td>
-                    <td>참여신청서</td>
-                    <td></td>
-                    <td>개인정보 수집/이용제공에 대한 동의서(참여자용)</td>
-                    <td>UI_ADHPCbP11</td>
-                    <td class="status"></td>
-                    <td></td>
-                    <td>
-                        <a href="./pc/UI_ADHPCbP11.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
             </tbody>
