--- a/index_univ.html
+++ b/index_univ.html
@@ -748,7 +748,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS06.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPChS06-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPChS06-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
