--- a/pc/UI_ADHPChS08.html
+++ b/pc/UI_ADHPChS08.html
@@ -590,7 +590,7 @@
                                                                         </label>
                                                                     </div>
                                                                     <div class="radio_input_item">
-                                                                        <input class="focus_on" type="text" class="yes_input" id="yesInput1" name="yesInput1" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
+                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput1" name="yesInput1" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
                                                                     <div class="new_radio_item">
@@ -614,7 +614,7 @@
                                                                         </label>
                                                                     </div>
                                                                     <div class="radio_input_item">
-                                                                        <input class="focus_on" type="text" class="yes_input" id="yesInput2" name="yesInput2" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
+                                                                        <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput2" name="yesInput2" disabled aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
                                                                     <div class="new_radio_item">
@@ -636,7 +636,7 @@
                                                                     </li>
                                                                     <li>
                                                                         <label for="support_amount">지원금액</label>
-                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000">
+                                                                        <input type="text" id="support_amount" name="support_amount" aria-required="false" value="1,000,000" class="money_amount">
                                                                         <span aria-hidden="true">원</span>
                                                                     </li>
                                                                 </ul>
