--- a/index_univ.html
+++ b/index_univ.html
@@ -667,7 +667,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>점프업_포인트신청관리_목록</td>
+                    <td>점프업_포인트관리_목록</td>
                     <td>UI_ADHPChM01</td>
                     <td class="status"></td>
                     <td></td>
@@ -683,7 +683,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>점프업_포인트신청관리_신청(등록)</td>
+                    <td>점프업_포인트관리_신청(등록)</td>
                     <td>UI_ADHPChS02</td>
                     <td class="status"></td>
                     <td></td>
@@ -713,7 +713,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>부정수급 방지 확약서</td>
+                    <td>부정수급 방지 확인서</td>
                     <td>UI_ADHPChS04</td>
                     <td class="status"></td>
                     <td></td>
@@ -728,7 +728,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>점프업_포인트신청관리_수정(저장후제출전)</td>
+                    <td>포인트관리_수정(저장후제출전)</td>
                     <td>UI_ADHPChS05</td>
                     <td class="status"></td>
                     <td></td>
@@ -743,7 +743,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>점프업_포인트신청관리_조회(제출후)</td>
+                    <td>포인트관리_조회(제출후)</td>
                     <td>UI_ADHPChS06</td>
                     <td class="status"></td>
                     <td></td>
@@ -759,12 +759,27 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
-                    <td>점프업_포인트신청관리_조회(보완요청)</td>
+                    <td>포인트관리_조회(보완요청)</td>
                     <td>UI_ADHPChS07</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td>포인트신청관리(점프업)</td>
+                    <td>포인트관리_조회(승인, 미지급, 환급)</td>
+                    <td>UI_ADHPChS08</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPChS08.html" target="_blank">PC</a>
                     </td>
                 </tr>
             </tbody>
