--- a/pc/UI_ADHPChS02.html
+++ b/pc/UI_ADHPChS02.html
@@ -133,7 +133,7 @@
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="new_radio_item">
-                                                                        <input type="radio" id="participationType1" name="participationType" value="">
+                                                                        <input type="radio" id="participationType1" name="participationType" value="" checked>
                                                                         <label for="participationType1">
                                                                             <span class="label_text">자기주도형</span>
                                                                         </label>
