--- a/index_univ.html
+++ b/index_univ.html
@@ -139,7 +139,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCbS04.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCbS04-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCbS04-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -340,6 +341,21 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS06.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td>경력개발로드맵(빌드업)</td>
+                    <td></td>
+                    <td>UI_ADHPCdS07</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/UI_ADHPCdS07.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
                 <tr>
