--- a/pc/UI_ADHPCgM05.html
+++ b/pc/UI_ADHPCgM05.html
@@ -299,10 +299,7 @@
 
                                         <div class="flex_box mt40 js_s">
                                             <button type="button" class="btn big type02 btn_s_r" aria-label="목록" onclick="">목록</button>
-                                            <div class="flex_gap16">
-                                                <button type="button" id="saveBtn" class="btn big type01" onclick="">저장</button>
-                                                <button type="submit" id="submithBtn" class="btn big fill type01" onclick="">제출</button>
-                                            </div>
+                                            <button type="button" id="" class="btn big fill type01" onclick="">보완제출</button>
                                         </div>
                                     </div>
                                 </div>
