--- a/pc/UI_ADHPCdS07.html
+++ b/pc/UI_ADHPCdS07.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>빌드업 - 경력개발로드맵_조회(제출후)</title>
+        <title>빌드업_경력개발로드맵_조회(변경신청후-회수)빌드업_경력개발로드맵_조회(변경신청후-회수)</title>
         <script src="../pc/include/js/head.js"></script>
         <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
@@ -70,10 +70,7 @@
 
                                         <div class="my_ptcp_from">
                                             <div class="box_group_wrap mt40">
-                                                <div class="prof_tit_twin">
-                                                    <h3 class="t2_sb">참여자 정보</h3>
-                                                    <button class="btn medium type02 btn_prof_edit" type="button"><span>회원정보 수정</span></button>
-                                                </div>
+                                                <h3 class="t2_sb">참여자 정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>성명, 전공/학과, 학번, 학적 상태, 학년, 학기 을(를) 제공하는 표</caption>
@@ -304,6 +301,42 @@
                                                 </div>
                                             </div>
 
+                                            <div class="box_group_wrap">
+                                                <h3 class="t2_sb">나의 다짐</h3>
+                                                <div class="box_table_wrap write type01">
+                                                    <table class="box_table"><caption>나의 다짐 내용 을(를) 제공하는 표</caption>
+                                                        <colgroup>
+                                                            <col style="width:20%">
+                                                            <col style="width:auto">
+                                                        </colgroup>
+                                                        <tbody>
+                                                            <tr>
+                                                                <th scope="row">내용</th>
+                                                                <td>입력한 다짐 내용 TEST TEST TEST TEST TEST TEST TEST</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+
+                                            <div class="box_group_wrap">
+                                                <h3 class="t2_sb">변경신청 사유</h3>
+                                                <div class="box_table_wrap write type01">
+                                                    <table class="box_table"><caption>변경신청 사유 내용 을(를) 제공하는 표</caption>
+                                                        <colgroup>
+                                                            <col style="width:20%">
+                                                            <col style="width:auto">
+                                                        </colgroup>
+                                                        <tbody>
+                                                            <tr>
+                                                                <th scope="row">내용</th>
+                                                                <td>입력한 다짐 내용 TEST TEST TEST TEST TEST TEST TEST</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+
 
                                             <div class="box_group_wrap">
                                                 <div class="tit_box">
@@ -313,7 +346,7 @@
                                                 <div class="apply_summary_wrap" role="region">
                                                     <div class="apply_summary_header">
                                                         <div class="apply_summary_info">
-                                                            <p class="apply_summary_tit">현재 참여신청서 <span>제출</span> 상태입니다.</p>
+                                                            <p class="apply_summary_tit">현재 참여신청서 <span>변경신청</span> 상태입니다.</p>
                                                             <p class="apply_summary_tel b1_r">담당자 : 김담당 (010-0000-0000)</p>
                                                         </div>
                                                         <div class="apply_summary_action mt16"><button type="button" class="apply_summary_toggle on" aria-expanded="true" aria-controls="applySummaryDetail">신청 및 처리현황 이력</button></div>
@@ -328,6 +361,19 @@
                                                                     <p class="status_date">2025-00-00</p>
                                                                 </div>
                                                             </li>
+                                                            <li>
+                                                                <div class="apply_summary_status">
+                                                                    <p class="status_label">승인</p>
+                                                                    <p class="status_date">2025-00-00</p>
+                                                                </div>
+                                                            </li>
+                                                            <li>
+                                                                <div class="apply_summary_status">
+                                                                    <p class="status_label">변경신청</p>
+                                                                    <p class="status_date">2025-00-00</p>
+                                                                </div>
+                                                                <p class="apply_summary_reason">신청사유 : 변경신청한 사용자가 등록한 내용</p>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -336,7 +382,7 @@
                                             <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
                                                 <div class="btn_box mt40">
                                                     <button type="button" class="btn big type02 btn_s_r" aria-label="목록" onclick="">목록</button>
-                                                    <button type="submit" id="srchBtn" class="btn big fill type01" onclick="">회수</button>
+                                                    <button type="button" id="returnBtn" class="btn big fill type01" onclick="">회수</button>
                                                 </div>
                                             </div>
                                         </div>
